Added styles to pdf reports

--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -1326,24 +1326,22 @@
                 <div class="modal-body">
                     <form id="team-form">
                         <div class="mb-3">
-                            <label class="form-label">Import from Collaborators <span class="text-muted small">(optional)</span></label>
-                            <select class="form-select" id="team-from-collaborator" onchange="fillTeamFromCollaborator()">
-                                <option value="">— Fill manually —</option>
+                            <label class="form-label fw-semibold">Select Collaborator</label>
+                            <select class="form-select" id="team-from-collaborator" onchange="fillTeamFromCollaborator()" required>
+                                <option value="">— Select a collaborator —</option>
                             </select>
-                            <div class="form-text">Select a collaborator to auto-fill name, email and role.</div>
+                            <div class="form-text">Only collaborators assigned to this promotion can be added.</div>
                         </div>
-                        <hr>
-                        <div class="mb-3">
-                            <label class="form-label">Name</label>
-                            <input type="text" class="form-control" id="team-name" required>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Role</label>
-                            <input type="text" class="form-control" id="team-role" placeholder="e.g. Formador/a">
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Email</label>
-                            <input type="email" class="form-control" id="team-email">
+                        <!-- Collaborator info preview -->
+                        <div id="team-collab-preview" class="d-none mb-3">
+                            <div class="alert alert-light border d-flex align-items-center gap-3 py-2">
+                                <i class="bi bi-person-badge fs-4 text-primary"></i>
+                                <div>
+                                    <div class="fw-semibold" id="team-preview-name"></div>
+                                    <div class="text-muted small" id="team-preview-email"></div>
+                                    <span class="badge mt-1" id="team-preview-role-badge"></span>
+                                </div>
+                            </div>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Module</label>
@@ -1352,8 +1350,8 @@
                             </select>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">LinkedIn URL</label>
-                            <input type="url" class="form-control" id="team-linkedin">
+                            <label class="form-label">LinkedIn URL <span class="text-muted small">(optional)</span></label>
+                            <input type="url" class="form-control" id="team-linkedin" placeholder="https://linkedin.com/in/...">
                         </div>
                     </form>
                 </div>
